[package]
name = "httprouter"
version = "0.2.0"
license = "MIT"
authors = ["ibraheem <ibrah1440@gmail.com>"]
edition = "2018"
description = "A high performance HTTP request router that scales well."
categories = ["web-programming::http-client", "network-programming", "algorithms"]
keywords = ["hyper", "path", "tree", "radix", "router"]
repository = "https://github.com/ibraheemdev/httprouter-rs/"
readme = "README.md"

[dependencies]
hyper = "0.14"
matchit = "0.2.0"

[dev-dependencies]
hyper = { versio = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
